# large_deformation_lung

./: -ksp_type00.e-s.000  .fuse_hidden000012930000000d  .gitignore  .gitignore~  H1.vtk  H_1.tec  Makefile  Makefile.am  Makefile.in  add_coupling_fast.cpp  add_coupling_fast_fvec.cpp  add_couplingv4.cpp  add_couplingv5.cpp  assemble_bcs.C  assemble_coupled_rhs.C  assemble_coupled_stiffness.C  assemble_postvars.C  assemble_postvars.cpp  assemble_postvars_rhs.C  assemble_postvars_rhs.cpp  assemble_preamble_postvars.cpp  assemble_rhs.C  assemble_rhs_stabilization.cpp  assemble_solid.C  assemble_solid_qp.cpp  assemble_stabilization.cpp  assemble_stiffness_constraint_int.cpp  assemble_stiffness_weak.cpp  callgrind.out.1874  callgrind.out.2141  create_arrays_mats.cpp  create_destroyfvec.cpp  create_include.cpp  create_include_add_coupling.cpp  create_include_add_coupling_fvec.cpp  create_include_part1.cpp  create_include_part2.cpp  create_include_setup.cpp  cube01.e-s.002  general_material_cc.C  (+25 more)
.deps/: example_dbg-assemble_bcs.Po  example_dbg-assemble_solid.Po  example_dbg-general_material_cc.Po  example_dbg-poro_elastic_cc.Po  example_dbg-poro_main.Po  example_dbg-read_parameters.Po  example_dbg-setup_equationsystem.Po  example_dbg-systems_of_equations_ex4.Po  example_dbg-useful_functions.Po  example_opt-assemble_bcs.Po  example_opt-assemble_coupled_rhs.Po  example_opt-assemble_coupled_stiffness.Po  example_opt-assemble_solid.Po  example_opt-general_material_cc.Po  example_opt-poro_elastic_cc.Po  example_opt-poro_main.Po  example_opt-read_parameters.Po  example_opt-tree.Po  (+9 more)
(+1012 files in other folders)
